# openbci

./: Cargo.toml  README.md  REFERENCES.bib  RELEASE_NOTES.md
examples/: cyton_daisy_stream.rs  cyton_stream.rs  galea_stream.rs  ganglion_ble.rs  wifi_stream.rs
src/: channel_config.rs  electrode.rs  error.rs  lib.rs  packet.rs  sample.rs
src/board/: cyton.rs  cyton_daisy.rs  cyton_daisy_wifi.rs  cyton_wifi.rs  galea.rs  ganglion.rs  ganglion_wifi.rs  mod.rs  wifi_shield.rs
src/tests/: channel_config_tests.rs  electrode_tests.rs  mod.rs  packet_tests.rs  sample_tests.rs
